first commit in branch

--- a/README
+++ b/README
@@ -5,5 +5,4 @@ Argus Arduino Project
 The Argus Project aims to: 
 
 - read data from a physical arduino board attached to a plant 
-- display the incoming data in a meaningful way to assist the user in plantcare and
-
+- display the incoming data in a meaningful way to assist the user in plantcare
