--- a/README
+++ b/README
@@ -7,4 +7,4 @@ The Argus Project aims to:
 - read data from a physical arduino board attached to a plant 
 - display the incoming data in a meaningful way to assist the user in plantcare
 
-in argusJake
+removed
