hello: edited readme file

--- a/README
+++ b/README
@@ -8,4 +8,4 @@ The Argus Project aims to:
 - display the incoming data in a meaningful way to assist the user in plantcare
 check this
 
-testing!
+testing v2!
